--- a/src/main/resources/simulation.fxml
+++ b/src/main/resources/simulation.fxml
@@ -10,7 +10,7 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0" stylesheets="simulation.css"
-            fx:controller="agh.ics.oop.model.presenter.SimulationPresenter"
+            fx:controller="agh.ics.oop.presenter.SimulationPresenter"
 >
 
 
